# django-debug-request

./: README.rst  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
django_debug_request/: apps.py
src/django_debug_request/management/commands/: debug_request.py
testproject/testproject/: asgi.py  settings.py  urls.py  wsgi.py
